--- a/assets/css/frame.sass
+++ b/assets/css/frame.sass
@@ -5,7 +5,7 @@
 
 html
   background: lighten($dark, 70%)
-  padding: 0 calc(38% - 22em)
+  padding: 0 // Removed the original padding and set to 0
 
 body
   box-shadow: 0 0 .3em lighten($dark, 65%)
@@ -13,15 +13,18 @@ body
 body > header, body > footer
   background: lighten($dark, 5%)
   color: $light
+  padding: 0 // Added padding property to remove padding from header and footer
 
 @media (min-width: 32em)
   body > header, body > article, body > footer
-    padding: 1.75em calc(22% - 6em)
+    padding: 0 // Set padding to 0 for larger screens
 
 @media (prefers-color-scheme: dark)
   html
     background: darken($dark, 4%)
   body > header, body > footer
     background: $dark
+    padding: 0 // Set padding to 0 for dark mode
   body, body > header, body > footer
     box-shadow: 0 0 0 1px lighten($dark, 8%)
+
